--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
       <div class="button">
         <button type="button" onclick="Reminder()">Find Out!</button>
       </div>
+       <div class="button">
+        <button type="button" onclick="Savings()">How Much Will I Save?</button>
+      </div>
     </div>
 
     <script src="PowerSaverAlpha.js"></script>
