--- a/index.html
+++ b/index.html
@@ -3,14 +3,19 @@
   <head>
     <meta charset="utf-8">
     <title>power$aver</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="css/master.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
-    <div class="body">
-      <img src="img/logo.svg" alt="" />
-      <h1>Is it a good time to use electricity?</h1>
-      <div class="button">
-        <button type="button" onclick="Reminder()">Find Out!</button>
+    <div class="container">
+      <div class="row">
+        <img class="col-xs-12" src="img/logo2.svg" alt="" />
+      </div>
+      <div class="row">
+        <h1>Is it a good time to use electricity?</h1>
+      </div>
+      <div class="button row">
+        <button class="row" type="button" onclick="Reminder()">Find Out!</button>
       </div>
     </div>
 
