styled 'savings' button

--- a/index.html
+++ b/index.html
@@ -15,11 +15,9 @@
         <h1>Is it a good time to use electricity?</h1>
       </div>
       <div class="button row">
-        <button class="row" type="button" onclick="Reminder()">Find Out!</button>
+        <button type="button" onclick="Reminder()">Find Out!</button>
       </div>
-       <div class="button">
-        <button type="button" onclick="Savings()">How Much Will I Save?</button>
-      </div>
+      <button class="savings" type="button" onclick="Savings()">How Much Will I Save?</button>
     </div>
 
     <script src="PowerSaverAlpha.js"></script>
