--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="css/master.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
+    <div class="row logo">
+      <img class="col-xs-12" src="img/logo2.svg" alt="" />
+    </div>
     <div class="container">
-      <div class="row">
-        <img class="col-xs-12" src="img/logo2.svg" alt="" />
-      </div>
       <div class="row">
         <h1>Is it a good time to use electricity?</h1>
       </div>
